First draft of final paper

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -205,4 +205,26 @@
     journal={The Lancet},
     year={2000},
     pages={1324}
+},
+
+@article{thomas,
+    author={Thomas, C.},
+    title={Antibiotics and hospital-acquired Clostridium difficile-associated diarrhoea: a systematic review},
+    volume={51},
+    DOI={10.1093/jac/dkg254},
+    number={6},
+    journal={Journal of Antimicrobial Chemotherapy},
+    year={2003},
+    pages={1339-1350}
+},
+
+@article{hensgens,
+    author={Hensgens, M. P. M. and Goorhuis, A. and Dekkers, O. M. and Kuijper, E. J.},
+    title={Time interval of increased risk for Clostridium difficile infection after exposure to antibiotics},
+    volume={67},
+    DOI={10.1093/jac/dkr508},
+    number={3},
+    journal={Journal of Antimicrobial Chemotherapy},
+    year={2011},
+    pages={742-748}
 }
