grammar/style -- abstract

--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -8,10 +8,10 @@ author:
 date: "`r format(Sys.time(), '%d %B %Y')`"
 bibliography: bibliography.bib
 abstract: |
-  **Objective —** In “Epidemiological Model for *Clostridium Difficile* Transmission in Health-Care Settings,” published by @lanzas, the authors developed a compartmental mathematical model of *C. difficile* nosocomial transmission (the “*Lanzas* model”). The paper highlights the importance of patient-patient transmission to *C. difficile* burden in hospital settings, as the authors found that the transmission coefficients associated with colonized and/or symptomatically diseased patients were significant drivers of whether R0 was greater or less than 1. Since publication, however, fecal transplantation to restore endogenous flora has gained increasing acceptance as a curative therapy for *C. difficile*. To date, the majority of attention has focused on fecal transplantation’s clinical implications, but it also fundamentally alters susceptibility and recovery rates relative to conventional antibiotic-based regimens. These rates are directly relevant to *C.  difficile* transmission dynamics, in particular transmission from symptomatically diseased patients, but to our knowledge have not been modeled in the literature. Our objective was to update the *Lanzas* model to incorporate fecal transplant as an alternative to antibiotic treatment in order to evaluate resulting effects on *C. difficile* hospital-based transmission.
+  **Objective —** In “Epidemiological Model for *Clostridium Difficile* Transmission in Health-Care Settings,” published by @lanzas, the authors developed a compartmental mathematical model of *C. difficile* nosocomial transmission (the “*Lanzas* model”). The paper highlights the importance of patient-patient transmission to *C. difficile* burden in hospital settings, as the authors found that the transmission coefficients associated with colonized and/or symptomatically diseased patients were significant drivers of whether R0 was greater or less than 1. Since publication, however, fecal transplantation to restore endogenous flora has gained increasing acceptance as a curative therapy for *C. difficile*. To date, the majority of attention has focused on the clinical implications of fecal transplantation; however, this therapy also fundamentally alters susceptibility and recovery rates relative to conventional antibiotic-based regimens. These rates are directly relevant to *C.  difficile* transmission dynamics, in particular transmission from symptomatically diseased patients, but have not been modeled in the literature. Our objective was to update the *Lanzas* model to incorporate fecal transplant as an alternative to antibiotic treatment in order to evaluate resulting effects on *C. difficile* hospital-based transmission.
   **Design —** Retrospective cohort.  
   **Setting and Patients —** All patients admitted to the medical wards at a large tertiary care hospital in the United States between January 1 and December 31, 2008 (underlying study cohort of Lanzas).
-  **Methods —** The *Lanzas* model was modified to include fecal transplant, in addition to antibiotic therapy, as treatment for *C.  difficile* infection (CDI). To incorporate fecal transplant, we altered the original model in two primary ways: (1) Collapse of the two asymptomatically colonized states, C^-^ and C^+^ (with and without protection against CDI), into a single colonized state, C; and (2) Expansion of the single “susceptible to colonization” state, S, into separate compartments: “susceptible to colonization following antibiotic treatment” (S~a~) and “susceptible to colonization following fecal transplant” (S~f~). The modified model includes five possible transition states: resistant to colonization (R), susceptible to colonization following antibiotic therapy (S~a~), susceptible to colonization following fecal transplant (S~f~), asymptomatically colonized (C), and patients with symptomatic disease (D). The addition of new parameters to reflect fecal transplant-associated transition rates among compartments were derived from the literature.
+  **Methods —** The *Lanzas* model was modified to include fecal transplant, in addition to antibiotic therapy, as treatment for *C.  difficile* infection (CDI). To incorporate fecal transplant, we altered the original model in two primary ways: (1) Collapse of the two asymptomatically colonized states, C^+^ and C^-^ (with and without protection against CDI, respectively), into a single colonized state, C; and (2) Expansion of the single “susceptible to colonization” state, S, into separate compartments: “susceptible to colonization following antibiotic treatment” (S~a~) and “susceptible to colonization following fecal transplant” (S~f~). The modified model includes five possible transition states: resistant to colonization (R), susceptible to colonization following antibiotic therapy (S~a~), susceptible to colonization following fecal transplant (S~f~), asymptomatically colonized (C), and patients with symptomatic disease (D). The new parameters to reflect fecal transplant-associated transition rates between compartments were derived from the literature.
 output: pdf_document
 documentclass: article
 header-includes:
